<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    	xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/welcome_activity_layout_root"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="bottom|left"
		android:keepScreenOn="true">
	
    <Button 
		android:id = "@+id/welcome_activity_login_btn"
		android:text="@string/login_btn_text"
		android:layout_width="150dp"
		android:layout_height="60dp"
		/>
    
	<Button 
		android:id="@+id/welcome_activity_play_btn"
		android:text="@string/play_btn_text"
		android:layout_width="150dp"
		android:layout_height="60dp"
		/>

	<LinearLayout 
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
	    <Button 
			android:id="@+id/welcome_activity_credits_btn"
			android:text="@string/credits_btn_text"
			android:layout_width="150dp"
			android:layout_height="60dp"
			/>
	    
		<!--<Button 
				android:id="@+id/welcome_activity_demo_btn"
				android:text="COKOLWIEK"
				android:layout_width="150dp"
				android:layout_height="60dp"
				/>
		-->
		
		<TextView 
		    android:id="@+id/welcome_activity_welcome_txt"
			android:text="@string/welcome_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="15dp"
			android:gravity="bottom|right"
			android:layout_gravity="bottom|right"
			android:layout_marginRight="10dp"
			android:layout_marginBottom="10dp"
			/>
		
	</LinearLayout>
</LinearLayout>